# lexsat_npn

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example_aig_4bit.aig
scripts/: profile.py  profile_all.sh  test_formula.py  test_lexsat.py  test_lexsat_improvement.py  test_lexsat_npn.py  test_npn.py
src/lexsat_npn/: __init__.py  formula.py  lexsat.py  lexsat_npn.py  npn.py  transformation.py  tt_npn.py
