[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexsat_npn"
version = "0.1.0"
description = "Using LEXSAT for heuristic-based NPN canonicalization"
readme = "README.md"
authors = [{ name = "Chengdi Cao" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
